WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11853
REGRESSION (
r17352
): Whitespace in <title> is rendered
https://bugs.webkit.org/show_bug.cgi?id=11853
Summary
REGRESSION (r17352): Whitespace in <title> is rendered
Matt Lilek
Reported
2006-12-16 11:20:53 PST
Excessive whitespace in the <title> element is rendered on ToT but not Safari 2.0.4 (or any other browser). Probably due to the loader refactoring?
Attachments
reduction
(238 bytes, text/html)
2006-12-16 11:21 PST
,
Matt Lilek
no flags
Details
patch
(4.00 KB, patch)
2007-01-16 16:13 PST
,
Sam Weinig
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2006-12-16 11:21:37 PST
Created
attachment 11884
[details]
reduction
mitz
Comment 2
2006-12-16 11:42:50 PST
I think this is a result of <
http://trac.webkit.org/projects/webkit/changeset/17352
>, which promised to "[replace] stringByCollapsingNonPrintingCharacters with a c++ equivalent". I couldn't find the equivalent, nor when it is applied to the title.
Matt Lilek
Comment 3
2006-12-16 11:59:29 PST
Bug11692
seems to have been caused by that change too.
Sam Weinig
Comment 4
2007-01-16 16:13:27 PST
Created
attachment 12496
[details]
patch Patch modifies the method canonicalizedTitle() to collapse the internal whitespace. This required removing an optimization in the function. I added a test to the manuel tests as the DRT does not dump the title.
Maciej Stachowiak
Comment 5
2007-01-16 22:02:57 PST
r=me Might be worth enhancing layout tests to be able to dump title.
Mark Rowe (bdash)
Comment 6
2007-01-18 19:52:47 PST
Landed in
r18972
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug