2007-01-18  Sam Weinig  <sam@webkit.org>

Reviewed by Maciej.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=11853
        REGRESSION (r17352): Whitespace in <title> is rendered

        * loader/DocumentLoader.cpp:
        (WebCore::canonicalizedTitle): Changed to also collapse internal
        whitespace.  This required removing an optimization that is no
        longer possible.
        * manual-tests/title-internal-whitespace.html: Added.


Canonical link: https://commits.webkit.org/15950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18972 268f45cc-cd09-0410-ab3c-d52691b4dbfc